index.css and index.html updated

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <!-- font-awesome library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -24,9 +27,16 @@
         <input type="text" id="input-field" placeholder="Bread">
         <button id="add-button">Add to cart</button>
         <ul id="shopping-list">
-            
         </ul> 
+
+        <footer class="social">
+            <a href="https://github.com/sahil-ansari01" class="fa fa-github-square"></a>
+            <a href="https://twitter.com/SahilAnsari01" class="fa fa-twitter-square"></a>
+            <a href="https://www.linkedin.com/in/sahilansari01/" class="fa fa-linkedin-square"></a>
+        </footer>
     </div>
+
+    
     <script src="index.js" type="module"></script>
 </body>
 </html>
